--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('./partials/head') %>
-        <title>Homepage</title>
+        <title>Blogger - AddBlog</title>
 </head>
 
 <body>
