--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('./partials/head') %>
-        <title>Sign Up</title>
+        <title>Blogger - Login</title>
         <link rel="stylesheet" href="../public/css/signup.css">
 </head>
 
@@ -19,7 +19,7 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-primary">Login</button>
             </div>
         </form>
 
