--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('./partials/head') %>
-        <title>Sign Up</title>
+        <title>Blogger - Sign Up</title>
         <link rel="stylesheet" href="../public/css/signup.css">
 </head>
 
