--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head') %>
-    <title>Blog Details</title>
+    <title>Blogger - Blog Details</title>
 </head>
 <body>
     <%- include('./partials/navbar') %>
