Fix vercel 404 routing

--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -19,7 +19,7 @@
                     <textarea name="content" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="coverPage" class="form-label">Cover Image Filename (e.g. img1.jpg)</label>
+                    <label for="coverPage" class="form-label">Cover Image Filename</label>
                     <input name="coverPage" class="form-control" type="file" placeholder="Enter image file name only">
                 </div>
                 <button type="submit" class="btn btn-primary">Add Blog</button>
